# mcp-agents

./: .gitignore  LICENSE  README.md
candytron_mcp/: README.md  base-saved-poses.yaml  camera.py  candytron_mcp.py  ned2.py  pyproject.toml  robotarm.py  transtable.py
dirigera/: README.md  config.toml  ikea.py
dirigera/fastmcp/: README.md  config.example.toml  dirigeramcp.py  gen_token.py  mcpclient.py  pyproject.toml
dirigera/pydanticai/: mcpagent.py  testa2a.py
face/: .gitignore  README.md  agent.py  debug_shell.py  download_models.py  events.py  face_config.py  face_config.toml  face_tracker.py  languages.toml  languages_config.py  llm.py  main.py  mcp_client.py  people_memory.py  pixi.toml  pyproject.toml  test_echo.py  voice_input.py  voice_output.py
githubmcp/: githubmcp.py  pyproject.toml
mcpclient_speech/: README.md  eyewindow.py  hardware_devices.py  mcpclient_speech.py  mcpclient_speech_face.py  piperscript  pyproject.toml  readnb.py  record.py  start-candytron.sh  windowmgr.py
mcpclient_text/: README.md  mcpclient_text.py  pyproject.toml
mcpscreen/: README.md  mcpclient.py  pyproject.toml  screenshot.py
mcpwebcam/: README.md  mcpclient.py  pyproject.toml  webcam.py
xledplus_mcp/: README.md  pyproject.toml  xledplus_mcp.py
