[project]
name = "mcpscreen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai",
    "fastmcp>=2.3.4",
    "matplotlib",
    "pyaudio",
    "sounddevice",
    "numpy",
    "faster-whisper",
    "torch",
    "torchaudio",
    "noisereduce",
    "piper-tts",
    "opencv-python",
    "face-recognition",
    "onnxruntime",
]
